fix a couple minor alignment issues
this doesn't fix concourse/concourse#2369 how i want to (there really
should just be a timestamp there), but it at least fixes the alignment

--- a/assets/css/build.less
+++ b/assets/css/build.less
@@ -68,8 +68,8 @@
       color: @base06;
     }
 
-    &.placeholder {
-      padding-right: 78px;
+    &.placeholder::before {
+      content: "        ";
     }
   }
 
