--- a/assets/css/production.less
+++ b/assets/css/production.less
@@ -79,13 +79,13 @@ button.build-action[disabled] i {
 
 .cli-downloads li {
   display: inline-block;
-  padding-right: 7px;
+  padding-left: 7px;
 }
 
 .display-in-middle .cli-downloads li {
   margin: 0.5em;
   border: 1px solid white;
-  padding-right: 0px;
+  padding-left: 0;
 
   &:hover {
     background: #242424;
@@ -122,10 +122,6 @@ button.build-action[disabled] i {
 
 .lower-right-info > .cli-downloads {
   text-align: right;
-}
-
-.lower-right-info td.label {
-  padding-right: .5em;
 }
 
 #concourse-version {
